--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socialgram",
+  "name": "social-gram",
   "version": "1.0.0",
   "description": "social media REST API",
   "main": "app.js",
