--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon -L app.js"
   },
   "author": "Rohit Kumar",
   "license": "ISC",
@@ -19,5 +19,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "morgan": "^1.10.0"
   }
 }
