--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,20 @@ version: '3'
 services:
   nginx:
     image: nginx:stable-alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "3000:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro # syncing the nginx config file with the container
+      - ./nginx:/etc/nginx/conf.d:ro
     depends_on:
       - nodeapp
 
   nodeapp:
-    build: .
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     # environment:
     #   - PORT=3000
     #   - JWT_SECRET=<JWT_SECRET>
